Refactor root stack parameters

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -23,9 +23,7 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  AudiogramECRRegion:
-    Type: String
-  AudiogramECRRepositoryName:
+  ECRRegion:
     Type: String
   AudiogramECRImageTag:
     Type: String
@@ -109,7 +107,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${AudiogramECRRegion}.amazonaws.com/${AudiogramECRRepositoryName}:${AudiogramECRImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${ECRRegion}.amazonaws.com/audiogram.prx.tech:${AudiogramECRImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
