--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -12,9 +12,7 @@ Parameters:
     Type: String
   RootStackTemplateConfigArchive:
     Type: String
-  AudiogramECRRegion:
-    Type: String
-  AudiogramECRRepositoryName:
+  ECRRegion:
     Type: String
   AudiogramECRImageTag:
     Type: String
@@ -203,9 +201,9 @@ Resources:
           - Name: TEMPLATE_CONFIG_ARTIFACT
             Value: !Ref RootStackTemplateConfigArchive
           - Name: ECR_REGION
-            Value: !Ref AudiogramECRRegion
+            Value: ${ECRRegion}
           - Name: ECR_REPOSITORY_NAME
-            Value: !Ref AudiogramECRRepositoryName
+            Value: audiogram.prx.tech
           - Name: ECR_IMAGE_TAG
             Value: !Ref AudiogramECRImageTag
         Image: aws/codebuild/docker:1.12.1
