--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -387,7 +387,7 @@ Resources:
               OutputArtifacts:
                 - Name: TemplateConfigZipArtifact
               RunOrder: 1
-        - Name: Staging
+        - Name: Housekeeping
           Actions:
             - Name: TemplateSync
               ActionTypeId:
@@ -402,6 +402,8 @@ Resources:
               OutputArtifacts:
                 - Name: StagingTemplateSyncArtifact
               RunOrder: 1
+        - Name: Staging
+          Actions:
             - Name: CreateChangeSet
               ActionTypeId:
                 Category: Deploy
@@ -495,6 +497,7 @@ Resources:
                 ChangeSetName: !Sub ${RootStackName}ChangeSetProduction
                 ParameterOverrides: !Sub |
                   {
+                    "BootstrapStackName": "${AWS::StackName}",
                     "RootStackTemplateConfigBucket": "${RootStackTemplateConfigBucket}",
                     "RootStackTemplateConfigArchive": "${RootStackTemplateConfigArchive}",
                     "SingletonStackRegion": "${SingletonStackRegion}",
