--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -25,9 +25,17 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  CmsECRRegion:
+  ECRRegion:
     Type: String
-  CmsECRRepositoryName:
+  EnvCmsHost:
+    Type: String
+  EnvIdHost:
+    Type: String
+  EnvFeederHost:
+    Type: String
+  EnvMetaHost:
+    Type: String
+  EnvPrxHost:
     Type: String
   CmsECRImageTag:
     Type: String
@@ -35,15 +43,11 @@ Parameters:
     Type: String
   CmsEnvAwsAccessKeyId:
     Type: String
-  CmsEnvAwsAccountId:
-    Type: String
   CmsEnvAwsBucket:
     Type: String
   CmsEnvAwsRegion:
     Type: String
   CmsEnvAwsSecretAccessKey:
-    Type: String
-  CmsEnvCmsHost:
     Type: String
   CmsEnvDatabasePoolSize:
     Type: Number
@@ -57,21 +61,13 @@ Parameters:
     Type: String
   CmsEnvDbPort3306TcpPort:
     Type: Number
-  CmsEnvFeederHost:
-    Type: String
-  CmsEnvIdHost:
-    Type: String
   CmsEnvMemcacheServers:
-    Type: String
-  CmsEnvMetaHost:
     Type: String
   CmsEnvMysqlAllowEmptyPassword:
     Type: String
   CmsEnvNewRelicKey:
     Type: String
   CmsEnvNewRelicName:
-    Type: String
-  CmsEnvPrxHost:
     Type: String
   CmsEnvPrxSecret:
     Type: String
@@ -159,7 +155,7 @@ Resources:
             - Name: AWS_ACCESS_KEY_ID
               Value: !Ref CmsEnvAwsAccessKeyId
             - Name: AWS_ACCOUNT_ID
-              Value: !Ref CmsEnvAwsAccountId
+              Value: !Ref AWS::AccountId
             - Name: AWS_BUCKET
               Value: !Ref CmsEnvAwsBucket
             - Name: AWS_REGION
@@ -167,7 +163,7 @@ Resources:
             - Name: AWS_SECRET_ACCESS_KEY
               Value: !Ref CmsEnvAwsSecretAccessKey
             - Name: CMS_HOST
-              Value: !Ref CmsEnvCmsHost
+              Value: !Ref EnvCmsHost
             - Name: DATABASE_POOL_SIZE
               Value: !Ref CmsEnvDatabasePoolSize
             - Name: DB_ENV_MYSQL_DATABASE
@@ -181,13 +177,13 @@ Resources:
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref CmsEnvDbPort3306TcpPort
             - Name: FEEDER_HOST
-              Value: !Ref CmsEnvFeederHost
+              Value: !Ref EnvFeederHost
             - Name: ID_HOST
-              Value: !Ref CmsEnvIdHost
+              Value: !Ref EnvIdHost
             - Name: MEMCACHE_SERVERS
               Value: !Ref CmsEnvMemcacheServers
             - Name: META_HOST
-              Value: !Ref CmsEnvMetaHost
+              Value: !Ref EnvMetaHost
             - Name: MYSQL_ALLOW_EMPTY_PASSWORD
               Value: !Ref CmsEnvMysqlAllowEmptyPassword
             - Name: NEW_RELIC_KEY
@@ -195,7 +191,7 @@ Resources:
             - Name: NEW_RELIC_NAME
               Value: !Ref CmsEnvNewRelicName
             - Name: PRX_HOST
-              Value: !Ref CmsEnvPrxHost
+              Value: !Ref EnvPrxHost
             - Name: PUBLIC_ASSET_SECRET
               Value: !Ref CmsEnvPublicAssetSecret
             - Name: RAILS_ENV
