--- a/cms.prx.org/pipeline.yml
+++ b/cms.prx.org/pipeline.yml
@@ -12,9 +12,7 @@ Parameters:
     Type: String
   RootStackTemplateConfigArchive:
     Type: String
-  CmsECRRegion:
-    Type: String
-  CmsECRRepositoryName:
+  ECRRegion:
     Type: String
   CmsECRImageTag:
     Type: String
@@ -114,7 +112,7 @@ Resources:
                   - "ecr:CompleteLayerUpload"
                   - "ecr:UploadLayerPart"
                   - "ecr:PutImage"
-                Resource: !Sub arn:aws:ecr:${CmsECRRegion}:${AWS::AccountId}:repository/${CmsECRRepositoryName}
+                Resource: !Sub arn:aws:ecr:${ECRRegion}:${AWS::AccountId}:repository/cms.prx.org
               - Effect: Allow
                 Action:
                   - "ecr:GetAuthorizationToken"
@@ -195,9 +193,9 @@ Resources:
           - Name: TEMPLATE_CONFIG_ARTIFACT
             Value: !Ref RootStackTemplateConfigArchive
           - Name: ECR_REGION
-            Value: !Ref CmsECRRegion
+            Value: !Ref ECRRegion
           - Name: ECR_REPOSITORY_NAME
-            Value: !Ref CmsECRRepositoryName
+            Value: cms.prx.org
           - Name: ECR_IMAGE_TAG
             Value: !Ref CmsECRImageTag
         Image: aws/codebuild/docker:1.12.1
