Remove explicit account ID parameter

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -419,10 +419,11 @@ Resources:
                 ChangeSetName: !Sub ${RootStackName}ChangeSetStaging
                 ParameterOverrides: !Sub |
                   {
+                    "BootstrapStackName": "${AWS::StackName}",
                     "RootStackTemplateConfigBucket": "${RootStackTemplateConfigBucket}",
                     "RootStackTemplateConfigArchive": "${RootStackTemplateConfigArchive}",
                     "SingletonStackRegion": "${SingletonStackRegion}",
-                    "OpsStatusMessagesSNSTopicArn": "${OpsStatusMessagesSNSTopic}"
+                    "OpsStatusMessagesSNSTopicArn": "${OpsStatusMessagesSNSTopic}",
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${RootStackName}-Staging
