Fix Upload lambda CodeBuild project name

--- a/upload.prx.org/pipeline.yml
+++ b/upload.prx.org/pipeline.yml
@@ -190,7 +190,7 @@ Resources:
             Value: !Ref PRXUploadAccessKey
         Image: aws/codebuild/nodejs:4.3.2
         Type: LINUX_CONTAINER
-      Name: !Sub upload.prx.org-${AWS::Region}-${EnvironmentTypeAbbreviation}
+      Name: !Sub upload-prx-org-${AWS::Region}-${EnvironmentTypeAbbreviation}
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
