--- a/root.yml
+++ b/root.yml
@@ -399,16 +399,16 @@ Resources:
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/pipeline.yml"]]
       TimeoutInMinutes: "5"
-  UploadLambdaStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-        LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+  # UploadLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
+  #     TimeoutInMinutes: "5"
 # Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
