Change Upload API http method

--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -37,7 +37,7 @@ Resources: #these will be launched for us by CF
     Properties:
       RestApiId: !Ref UploadRestApi
       ResourceId: !Ref UploadRestApiSignatureResource
-      HttpMethod: POST
+      HttpMethod: GET
       AuthorizationType: NONE
       Integration:
         Type: AWS_PROXY
