Fix bootstrap template syntax

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -423,7 +423,7 @@ Resources:
                     "RootStackTemplateConfigBucket": "${RootStackTemplateConfigBucket}",
                     "RootStackTemplateConfigArchive": "${RootStackTemplateConfigArchive}",
                     "SingletonStackRegion": "${SingletonStackRegion}",
-                    "OpsStatusMessagesSNSTopicArn": "${OpsStatusMessagesSNSTopic}",
+                    "OpsStatusMessagesSNSTopicArn": "${OpsStatusMessagesSNSTopic}"
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${RootStackName}-Staging
