--- a/root.yml
+++ b/root.yml
@@ -405,6 +405,9 @@ Resources:
       NotificationARNs:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
+        BootstrapStackName: !Ref BootstrapStackName
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
         LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
