--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -5,6 +5,8 @@ Parameters: #these get passed in to stack
     Type: String
   LambdaFunctionCodeS3Key:
     Type: String
+  PRXUploadAccessKey:
+    Type: String
 Resources: #these will be launched for us by CF
   LambdaBasicExecutionIAMRole: #creating a role, giving it the policies/permissions it'll need
     Type: "AWS::IAM::Role"
@@ -24,7 +26,7 @@ Resources: #these will be launched for us by CF
   UploadRestApi:
     Type: "AWS::ApiGateway::RestApi"
     Properties:
-      Name: "Upload-Gateway-API"
+      Name: !Sub "${BootstrapStackName}-${EnvironmentTypeAbbreviation}-Upload"
       Description: "Api used by PRX Upload Lambda"
   UploadRestApiSignatureResource:
     Type: "AWS::ApiGateway::Resource"
@@ -69,6 +71,9 @@ Resources: #these will be launched for us by CF
         S3Bucket: !Ref CodeBucket
         S3Key: !Ref LambdaFunctionCodeS3Key
       Description: File upload Lambda function
+      Environment:
+        Variables:
+          ACCESS_KEY: !Ref PRXUploadAccessKey
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn #can't use !Ref because it'll return name instead of ARN
