--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -1,14 +1,18 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: File upload Lambda function
-Parameters: #these get passed in to stack
+Parameters:
   CodeBucket:
     Type: String
   LambdaFunctionCodeS3Key:
     Type: String
   PRXUploadAccessKey:
     Type: String
-Resources: #these will be launched for us by CF
-  LambdaBasicExecutionIAMRole: #creating a role, giving it the policies/permissions it'll need
+  BootstrapStackName:
+    Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
+Resources:
+  LambdaBasicExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
       AssumeRolePolicyDocument:
@@ -76,6 +80,6 @@ Resources: #these will be launched for us by CF
           ACCESS_KEY: !Ref PRXUploadAccessKey
       Handler: index.handler
       MemorySize: 128
-      Role: !GetAtt LambdaBasicExecutionIAMRole.Arn #can't use !Ref because it'll return name instead of ARN
+      Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
       Runtime: nodejs4.3
       Timeout: 5
