Add to dependsOn

--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -78,7 +78,9 @@ Resources:
             method.response.header.Access-Control-Allow-Origin: true
           StatusCode: '200'
   UploadRestApiDeployment:
-    DependsOn: UploadRestApiSignatureMethod
+    DependsOn:
+      - UploadRestApiSignatureMethod
+      - UploadRestApiOptionsMethod
     Type: "AWS::ApiGateway::Deployment"
     Properties:
       RestApiId: !Ref UploadRestApi
