Cleanup and init publish codepipeline

--- a/root.yml
+++ b/root.yml
@@ -72,6 +72,9 @@ Parameters:
     Type: String
   ECRRegion:
     Type: String
+  ##############################################################################
+  ## SHARED ENVs ###############################################################
+  ##############################################################################
   EnvCmsHost:
     Type: String
   EnvPlayHost:
