--- a/root.yml
+++ b/root.yml
@@ -142,6 +142,12 @@ Parameters:
     Type: String
   PublishEnvBucketName:
     Type: String
+  PublishEnvGaKey:
+    Type: String
+  PublishEnvNewRelicAppName:
+    Type: String
+  PublishEnvNewRelicLicenseKey:
+    Type: String
   PublishEnvSignUrl:
     Type: String
   PublishEnvUseCloudfront:
