Codecov token for build

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -34,8 +34,10 @@ Parameters:
     Type: String
   EnvPlayHost:
     Type: String
-  # Publish ECR
+  # Publish building
   PublishECRImageTag:
+    Type: String
+  PublishCodecovToken:
     Type: String
   # Publish ENV
   PublishEnvAuthClientId:
