--- a/root.yml
+++ b/root.yml
@@ -132,6 +132,8 @@ Parameters:
     Type: String
   PublishECRImageTag:
     Type: String
+  PublishCodecovToken:
+    Type: String
   PublishEnvAuthClientId:
     Type: String
   PublishEnvAwsKey:
