--- a/publish.prx.org/pipeline.yml
+++ b/publish.prx.org/pipeline.yml
@@ -203,7 +203,7 @@ Resources:
           - Name: TEMPLATE_CONFIG_ARTIFACT
             Value: !Ref RootStackTemplateConfigArchive
           - Name: ECR_REGION
-            Value: ${ECRRegion}
+            Value: !Ref ECRRegion
           - Name: ECR_REPOSITORY_NAME
             Value: publish.prx.tech
           - Name: ECR_IMAGE_TAG
