--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -34,10 +34,8 @@ Parameters:
     Type: String
   EnvPlayHost:
     Type: String
-  # Publish building
+  # Publish ECS
   PublishECRImageTag:
-    Type: String
-  PublishCodecovToken:
     Type: String
   # Publish ENV
   PublishEnvAuthClientId:
