Fix VPC parameter type

--- a/ecs.yml
+++ b/ecs.yml
@@ -20,7 +20,7 @@ Parameters:
       Production, Staging, etc)
     Type: String
   VPC:
-    Type: "AWS::EC2::Subnet::Id"
+    Type: "AWS::EC2::VPC::Id"
   VPCSubnet1:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
