Enable Publish CI stack

--- a/root.yml
+++ b/root.yml
@@ -329,24 +329,24 @@ Resources:
   #       CmsEnvRailsSecretKey: !Ref CmsEnvRailsSecretKey
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms.prx.org/cms.prx.org.yml"]]
   #     TimeoutInMinutes: "5"
-  # PublishPipelineStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Condition: CreateSingletonStacks
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     Parameters:
-  #       CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
-  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #       GitHubOAuthToken: !Ref GitHubOAuthToken
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-  #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
-  #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
-  #       ECRRegion: !Ref ECRRegion
-  #       PublishECRImageTag: !Ref PublishECRImageTag
-  #       PublishCodecovToken: !Ref PublishCodecovToken
-  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/pipeline.yml"]]
-  #     TimeoutInMinutes: "5"
+  PublishPipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: CreateSingletonStacks
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        ECRRegion: !Ref ECRRegion
+        PublishECRImageTag: !Ref PublishECRImageTag
+        PublishCodecovToken: !Ref PublishCodecovToken
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/pipeline.yml"]]
+      TimeoutInMinutes: "5"
   # PublishStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   DependsOn: ECSClusterStack
