--- a/publish.prx.org/pipeline.yml
+++ b/publish.prx.org/pipeline.yml
@@ -192,7 +192,7 @@ Resources:
           - Name: ECR_REGION
             Value: !Ref ECRRegion
           - Name: ECR_REPOSITORY_NAME
-            Value: publish.prx.tech
+            Value: publish.prx.org
           - Name: ECR_IMAGE_TAG
             Value: !Ref PublishECRImageTag
           - Name: CODECOV_TOKEN
