Fix repo name again

--- a/publish.prx.org/pipeline.yml
+++ b/publish.prx.org/pipeline.yml
@@ -109,7 +109,7 @@ Resources:
                   - "ecr:UploadLayerPart"
                   - "ecr:PutImage"
                 # TODO maybe make name a template config param?
-                Resource: "arn:aws:ecr:us-east-1:561178107736:repository/publish.prx.tech"
+                Resource: "arn:aws:ecr:us-east-1:561178107736:repository/publish.prx.org"
               - Effect: Allow
                 Action:
                   - "ecr:GetAuthorizationToken"
