Put env type abbrev in name

--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -117,7 +117,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "Upload lambda errors"
+      AlarmName: "${EnvironmentTypeAbbreviation} upload lambda errors"
       AlarmActions:
         - !Ref OpsDebugMessagesSNSTopicArn
       AlarmDescription:
