Reinstate debug for CF notifications; add warn topic param

--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -1,6 +1,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: File upload Lambda function
 Parameters:
+  OpsWarnMessagesSNSTopicArn:
+    Type: String
   CodeBucket:
     Type: String
   LambdaFunctionCodeS3Key:
