Add missing param

--- a/root.yml
+++ b/root.yml
@@ -443,6 +443,7 @@ Resources:
       NotificationARNs:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
+        CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
         GitHubOAuthToken: !Ref GitHubOAuthToken
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
