actually make the string interpolation happen

--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -119,7 +119,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "${EnvironmentTypeAbbreviation} upload lambda errors"
+      AlarmName: !Sub "${EnvironmentTypeAbbreviation} upload lambda errors"
       AlarmActions:
         - !Ref OpsWarnMessagesSNSTopicArn
       AlarmDescription:
