--- a/upload.prx.org/upload.prx.org.yml
+++ b/upload.prx.org/upload.prx.org.yml
@@ -133,4 +133,4 @@ Resources:
       Threshold: "0"
       Dimensions:
         - Name: FunctionName
-        - Value: !Ref UploadLambdaFunction
+          Value: !Ref UploadLambdaFunction
