Remove approval step for staging

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -430,16 +430,16 @@ Resources:
                 TemplateConfiguration: TemplateConfigZipArtifact::staging.json
                 TemplatePath: InfrastructureRepoSourceArtifact::root.yml
               RunOrder: 2
-            - Name: ApproveChangeSet
-              ActionTypeId:
-                Category: Approval
-                Owner: AWS
-                Provider: Manual
-                Version: 1
-              Configuration:
-                NotificationArn: !Ref OpsStatusMessagesSNSTopic
-                CustomData: "TODO Get info about the deploy (last commit, etc)"
-              RunOrder: 3
+            # - Name: ApproveChangeSet
+            #   ActionTypeId:
+            #     Category: Approval
+            #     Owner: AWS
+            #     Provider: Manual
+            #     Version: 1
+            #   Configuration:
+            #     NotificationArn: !Ref OpsStatusMessagesSNSTopic
+            #     CustomData: "TODO Get info about the deploy (last commit, etc)"
+            #   RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
                 Category: Deploy
