Move Publish service to platform ALB

--- a/load-balancers.yml
+++ b/load-balancers.yml
@@ -44,9 +44,12 @@ Resources:
         - Key: Project
           Value: platform.prx.org
 Outputs:
-  Arn:
+  PlatformArn:
     Description: The ARN for the applications load balancer
     Value: !Ref PlatformALB
-  DNSName:
+  PlatformDNSName:
     Description: The DNS name for the applications load balancer
     Value: !GetAtt PlatformALB.DNSName
+  PlatformCanonicalHostedZoneID:
+    Description:
+    Value: !GetAtt PlatformALB.CanonicalHostedZoneID
