--- a/root.yml
+++ b/root.yml
@@ -377,6 +377,9 @@ Resources:
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        PlatformLBArn: !GetAtt LoadBalancersStack.Outputs.PlatformArn
+        PlatformLBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformDNSName
+        PlatformLBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformCanonicalHostedZoneID
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         EnvCmsHost: !Ref EnvCmsHost
