--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -23,6 +23,12 @@ Parameters:
     Type: String
   ECSServiceIAMRole:
     Type: String
+  PlatformLBArn:
+    Type: String
+  PlatformLBDNSName:
+    Type: String
+  PlatformLBCanonicalHostedZoneID:
+    Type: String
   EnvironmentTypeAbbreviation:
     Type: String
   ECRRegion:
@@ -63,30 +69,30 @@ Resources:
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
-  PublishSecurityGroup:
-    Type: "AWS::EC2::SecurityGroup"
-    Properties:
-      VpcId: !Ref VPC
-      GroupDescription: Allow web and SSH traffic to the ALB
-      SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-      Tags:
-        - Key: Name
-          Value: !Sub ${RootStackName} Publish ALB
+  # PublishSecurityGroup:
+  #   Type: "AWS::EC2::SecurityGroup"
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     GroupDescription: Allow web and SSH traffic to the ALB
+  #     SecurityGroupIngress:
+  #       - CidrIp: 0.0.0.0/0
+  #         IpProtocol: tcp
+  #         FromPort: 443
+  #         ToPort: 443
+  #       - CidrIp: 0.0.0.0/0
+  #         IpProtocol: tcp
+  #         FromPort: 80
+  #         ToPort: 80
+  #       - CidrIp: 0.0.0.0/0
+  #         IpProtocol: tcp
+  #         FromPort: 22
+  #         ToPort: 22
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub ${RootStackName} Publish ALB
   PublishALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
-    DependsOn: PublishALB
+    # DependsOn: PublishALB
     Properties:
       HealthCheckIntervalSeconds: 60
       UnhealthyThresholdCount: 10
@@ -95,22 +101,22 @@ Resources:
       Port: 80
       Protocol: HTTP
       VpcId: !Ref VPC
-  PublishALB:
-    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
-    Properties:
-      Scheme: internet-facing
-      SecurityGroups:
-        - !Ref PublishSecurityGroup
-      Subnets:
-        - !Ref VPCSubnet1
-        - !Ref VPCSubnet2
-      Tags:
-        - Key: Project
-          Value: publish.prx.org
+  # PublishALB:
+  #   Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
+  #   Properties:
+  #     Scheme: internet-facing
+  #     SecurityGroups:
+  #       - !Ref PublishSecurityGroup
+  #     Subnets:
+  #       - !Ref VPCSubnet1
+  #       - !Ref VPCSubnet2
+  #     Tags:
+  #       - Key: Project
+  #         Value: publish.prx.org
   PublishALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
-      LoadBalancerArn: !Ref PublishALB
+      LoadBalancerArn: !Ref PlatformLBArn
       Port: 80
       Protocol: HTTP
       DefaultActions:
@@ -121,7 +127,7 @@ Resources:
     Properties:
       Certificates:
         - CertificateArn: !Ref VPCCertificateArn
-      LoadBalancerArn: !Ref PublishALB
+      LoadBalancerArn: !Ref PlatformLBArn
       Port: 443
       Protocol: HTTPS
       DefaultActions:
@@ -191,7 +197,7 @@ Resources:
       TaskDefinition: !Ref PublishTaskDefinition
   PublishWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
-    DependsOn: PublishALB
+    # DependsOn: PublishALB
     Properties:
       Comment: Record sets for dualstack web traffic to an publish instance
       HostedZoneName: prx.tech.
@@ -199,12 +205,12 @@ Resources:
         - Type: A
           Name: !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
           AliasTarget:
-            DNSName: !GetAtt PublishALB.DNSName
-            HostedZoneId: !GetAtt PublishALB.CanonicalHostedZoneID
+            DNSName: !Ref PlatformLBDNSName
+            HostedZoneId: !Ref PlatformLBCanonicalHostedZoneID
 Outputs:
-  DNSName:
-    Description: The DNS name for the applications load balancer
-    Value: !GetAtt PublishALB.DNSName
+  # DNSName:
+  #   Description: The DNS name for the applications load balancer
+  #   Value: !GetAtt PublishALB.DNSName
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
