--- a/load-balancers.yml
+++ b/load-balancers.yml
@@ -45,11 +45,11 @@ Resources:
           Value: platform.prx.org
 Outputs:
   PlatformArn:
-    Description: The ARN for the applications load balancer
+    Description: The ARN for the application load balancer
     Value: !Ref PlatformALB
   PlatformDNSName:
-    Description: The DNS name for the applications load balancer
+    Description: The DNS name for the application load balancer
     Value: !GetAtt PlatformALB.DNSName
   PlatformCanonicalHostedZoneID:
-    Description:
+    Description: The hosted zone ID for the application load balancer
     Value: !GetAtt PlatformALB.CanonicalHostedZoneID
