--- a/root.yml
+++ b/root.yml
@@ -361,43 +361,43 @@ Resources:
         PublishCodecovToken: !Ref PublishCodecovToken
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/pipeline.yml"]]
       TimeoutInMinutes: "5"
-  # PublishStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   DependsOn: ECSClusterStack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     Parameters:
-  #       VPC: !GetAtt VPCStack.Outputs.VPC
-  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-  #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-  #       RootStackName: !Ref AWS::StackName
-  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-  #       PlatformLBArn: !GetAtt LoadBalancersStack.Outputs.PlatformArn
-  #       PlatformLBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformDNSName
-  #       PlatformLBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformCanonicalHostedZoneID
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-  #       ECRRegion: !Ref ECRRegion
-  #       EnvCmsHost: !Ref EnvCmsHost
-  #       EnvIdHost: !Ref EnvIdHost
-  #       EnvPlayHost: !Ref EnvPlayHost
-  #       PublishECRImageTag: !Ref PublishECRImageTag
-  #       PublishEnvAuthClientId: !Ref PublishEnvAuthClientId
-  #       PublishEnvAwsKey: !Ref PublishEnvAwsKey
-  #       PublishEnvAwsUrl: !Ref PublishEnvAwsUrl
-  #       PublishEnvBucketFolder: !Ref PublishEnvBucketFolder
-  #       PublishEnvBucketName: !Ref PublishEnvBucketName
-  #       PublishEnvGaKey: !Ref PublishEnvGaKey
-  #       PublishEnvNewRelicAppName: !Ref PublishEnvNewRelicAppName
-  #       PublishEnvNewRelicLicenseKey: !Ref PublishEnvNewRelicLicenseKey
-  #       PublishEnvSignUrl: !Ref PublishEnvSignUrl
-  #       PublishEnvUseCloudfront: !Ref PublishEnvUseCloudfront
-  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
-  #     TimeoutInMinutes: "5"
+  PublishStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
+        RootStackName: !Ref AWS::StackName
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        PlatformLBArn: !GetAtt LoadBalancersStack.Outputs.PlatformArn
+        PlatformLBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformDNSName
+        PlatformLBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformCanonicalHostedZoneID
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        ECRRegion: !Ref ECRRegion
+        EnvCmsHost: !Ref EnvCmsHost
+        EnvIdHost: !Ref EnvIdHost
+        EnvPlayHost: !Ref EnvPlayHost
+        PublishECRImageTag: !Ref PublishECRImageTag
+        PublishEnvAuthClientId: !Ref PublishEnvAuthClientId
+        PublishEnvAwsKey: !Ref PublishEnvAwsKey
+        PublishEnvAwsUrl: !Ref PublishEnvAwsUrl
+        PublishEnvBucketFolder: !Ref PublishEnvBucketFolder
+        PublishEnvBucketName: !Ref PublishEnvBucketName
+        PublishEnvGaKey: !Ref PublishEnvGaKey
+        PublishEnvNewRelicAppName: !Ref PublishEnvNewRelicAppName
+        PublishEnvNewRelicLicenseKey: !Ref PublishEnvNewRelicLicenseKey
+        PublishEnvSignUrl: !Ref PublishEnvSignUrl
+        PublishEnvUseCloudfront: !Ref PublishEnvUseCloudfront
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
+      TimeoutInMinutes: "5"
   # CmsAudioLambdaPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   Condition: CreateSingletonStacks
