--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -90,7 +90,7 @@ Resources:
   #     Tags:
   #       - Key: Name
   #         Value: !Sub ${RootStackName} Publish ALB
-  PublishALBTargetGroupA:
+  PublishALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     # DependsOn: PublishALB
     Properties:
@@ -113,7 +113,7 @@ Resources:
   #     Tags:
   #       - Key: Project
   #         Value: publish.prx.org
-  PublishALBHTTPListenerA:
+  PublishALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       LoadBalancerArn: !Ref PlatformLBArn
@@ -121,8 +121,8 @@ Resources:
       Protocol: HTTP
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref PublishALBTargetGroupA
-  PublishALBHTTPSListenerA:
+          TargetGroupArn: !Ref PublishALBTargetGroup
+  PublishALBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       Certificates:
@@ -132,7 +132,7 @@ Resources:
       Protocol: HTTPS
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref PublishALBTargetGroupA
+          TargetGroupArn: !Ref PublishALBTargetGroup
   PublishTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
@@ -181,8 +181,8 @@ Resources:
   PublishService:
     Type: "AWS::ECS::Service"
     DependsOn:
-      - PublishALBHTTPListenerA
-      - PublishALBHTTPSListenerA
+      - PublishALBHTTPListener
+      - PublishALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
       DeploymentConfiguration:
@@ -192,7 +192,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !FindInMap [ContainerNameMap, PublishApp, name]
           ContainerPort: 4200
-          TargetGroupArn: !Ref PublishALBTargetGroupA
+          TargetGroupArn: !Ref PublishALBTargetGroup
       Role: !Ref ECSServiceIAMRole
       TaskDefinition: !Ref PublishTaskDefinition
   PublishWebRecordSetGroup:
