--- a/root.yml
+++ b/root.yml
@@ -20,6 +20,13 @@ Mappings:
       abbreviation: stag
     Production:
       abbreviation: prod
+  ALBListenerRulePriorityMap:
+    Publish:
+      http: 1
+      https: 1
+    Audiogram:
+      http: 2
+      https: 2
 Conditions:
   CreateSingletonStacks: !And
     - !Equals [!Ref RootEnvironmentType, Staging]
@@ -236,6 +243,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/load-balancers.yml"]]
       TimeoutInMinutes: "5"
   # AudiogramPipelineStack:
@@ -377,9 +385,12 @@ Resources:
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-        PlatformLBArn: !GetAtt LoadBalancersStack.Outputs.PlatformArn
-        PlatformLBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformDNSName
-        PlatformLBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformCanonicalHostedZoneID
+        PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
+        PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+        PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Publish, http]
+        PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Publish, https]
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         EnvCmsHost: !Ref EnvCmsHost
