Add missing parameter

--- a/load-balancers.yml
+++ b/load-balancers.yml
@@ -3,6 +3,8 @@ Description: >
   Creates application load balancers that can be reused for multiple
   applications, using host- and path-based routing rules.
 Parameters:
+  EnvironmentTypeAbbreviation:
+    Type: String
   VPC:
     Type: "AWS::EC2::VPC::Id"
   VPCSubnet1:
