--- a/root.yml
+++ b/root.yml
@@ -240,6 +240,7 @@ Resources:
       NotificationARNs:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
