Fix host-header value for Publish listener rule

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -94,7 +94,7 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
+            - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Ref PlatformALBHTTPListenerPriority
   PublishTaskDefinition:
