Add HTTPS listener rule for Publish

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -97,6 +97,18 @@ Resources:
             - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Ref PlatformALBHTTPListenerPriority
+  PublishALBHTTPSHostListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PublishALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Ref PlatformALBHTTPSListenerPriority
   PublishTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
